fix word break on body

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -214,7 +214,7 @@ footer .glyphicon:hover {
 .deed-body{
 	font-size: 18px;
 	padding: 15px;
-	word-break:break-all;
+	word-break:break-word;
 	position:relative;
 }	
 .deed-name{
